# ha-spark

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  CONTEXT.md  README.md  ROADMAP.md  future_backlog.md  pyproject.toml  repository.yaml  skills-lock.json  usernotes.md
.claude/: settings.local.json
docs/: adding-an-inverter.md  releasing.md
docs/adr/: 0001-derived-base-load-by-energy-balance.md  0002-auditable-over-optimal-planning.md
docs/agents/: domain.md  issue-tracker.md
ha_agent/: __init__.py  __main__.py  cli.py  config.py
ha_spark/: __init__.py  __main__.py  cli.py  config.py  context_intent.py  copilot.py  dashboard.py  health.py  intent_parser.py  logging.py  ollama.py  onboarding_discover.py  presets.py  router.py
ha_spark_addon/: CHANGELOG.md  DOCS.md  Dockerfile  build.yaml  config.yaml  run.sh
tests/: test_agent_auth.py  test_agent_mcp.py  test_agent_port.py  test_agent_routes.py  test_agent_tools_act.py  test_agent_tools_read.py  test_api.py  test_api_serve.py  test_backtest.py  test_chargers.py  test_cli.py  test_config.py  test_context.py  test_context_intent.py  test_copilot.py  test_dashboard.py  test_devices.py  test_energy_sources.py  test_eval.py  test_forecast.py  test_golden_baseline.py  test_habits.py  test_health.py  test_intent_parser.py  test_ledger.py  test_ml.py  test_octopus.py  test_ollama.py  test_onboarding.py  test_onboarding_discover.py  test_orchestrator.py  test_planner.py  test_presets.py  test_profile.py  test_publish.py  test_report.py  test_rest.py  test_router.py  test_scheduler.py  test_solar.py  (+8 more)
(+62 files in other folders)
